Ajout localStorage, timer cooldown et bouton nouvelle partie
- Implémentation du localStorage pour persistance des données
- Timer de cooldown pour le tirage de 5 cartes
- Bouton nouvelle partie pour reset l'état
- Amélioration de l'interface mobile
- Guide pour continuer le développement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Pokemon TCG - Projet ESGI</title>
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/card.css">
+  <link rel="stylesheet" href="styles/timer.css">
 </head>
 <body>
   <header>
@@ -27,8 +28,10 @@
       </section>
     </div>
     <section id="battle-section">
-      <h2>Combat</h2>
-      <div id="battle"></div>
+      <h2>Actions</h2>
+      <div id="battle">
+        <button id="new-game-btn" class="new-game-btn">🔄 Nouvelle partie</button>
+      </div>
     </section>
   </main>
   <div id="modal-root"></div>
